Write a Business Cockpit report into the store its workflow aggregate lives in
An outbox entry has to ride the transaction which persists the aggregate it reports
about, and picking one store for the whole extension broke that in three ways: an
application whose stores all come from PhaseTwoOutboxAware beans was told to add a
data source it already had, an application with two persistences did not boot at all,
and where one of two stores was marked as primary the entries went into a store the
aggregate's transaction never reaches. Reports made through BusinessCockpitService
now ask for the store of their aggregate class, and an event a BPMS observed - which
carries identifiers and no class - uses the application's single store or says why it
cannot be attributed. Decision 8 is superseded by decision 10.

An entry which was to be written in the caller's transaction now goes through the
transaction runner, so a BPMS half which promised one and brought none is told
instead of having its entry committed on its own.

A failed report says whether repeating it can help: a status the cockpit server
blames the client for ends the entry, 503 and 429 give it back with the time the
server named, and over Kafka the client's own classification decides. A timestamp
which cannot be read ends the entry as well, rather than being replaced by the
current time. A report the BPMS no longer knows about is dropped as before, but says
so at WARN with the identifiers, and a bridge which may know the task in a moment
answers with PhaseTwoRetryLater instead.

The reserved version attribute of @UserTaskDetailsProvider is refused while the
application starts, naming the class and the method it stands on. Templates are
loaded from a classpath location as well as from a directory, the spellings version 1
accepted. A workflow module which configures nothing about the cockpit reports
nothing, said once at startup, while one which configures some of its settings and
not the rest still fails the boot